deploy/namespaces/uwcnc/barista.routes.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: barista
  namespace: uwcnc

spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`barista.uwcoffeencode.com`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: barista-default
  tls:
    secretName: tls-uwcoffeencode-com


---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: barista-default
  namespace: uwcnc

spec:
  redirectRegex:
    regex: ^https://barista.uwcoffeencode.com/.*$
    replacement: https://api.uwcoffeencode.com/admin
